# gonezo

./: .gitignore  AGENTS.md  Dockerfile  LICENCE  README.md  build.gradle  package-lock.json  package.json  settings.gradle  todo.md
.agents/: MANIFEST.json  RULE_CATALOG.md  SKILL_ROUTING.md
.agents/skills/adapter-contracts/: SKILL.md
.agents/skills/agent-working-agreement/: SKILL.md
.agents/skills/android-runtime-boundaries/: SKILL.md
.agents/skills/architecture-tests/: SKILL.md
.agents/skills/financial-domain-rules/: SKILL.md
.agents/skills/frontend-architecture/: SKILL.md
.agents/skills/import-backup-migration-rules/: SKILL.md
.agents/skills/native-bridge-contracts/: SKILL.md
.agents/skills/ports-and-adapters/: SKILL.md
.agents/skills/pragmatic-refactoring/: SKILL.md
.agents/skills/project-structure-contract/: SKILL.md
.agents/skills/repo-hygiene/: SKILL.md
.agents/skills/required-provided-capabilities/: SKILL.md
.agents/skills/scheduling-expected-posted-rules/: SKILL.md
.agents/skills/self-explanatory-code/: SKILL.md
.agents/skills/strict-ddd/: SKILL.md
.agents/skills/testing-strategy/: SKILL.md
android/app/: build.gradle
android/domain/: build.gradle  settings.gradle
api/: .gitignore  docker-compose.yml
app/: 1  README.md  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/android/: .gitignore  .project  build.gradle  settings.gradle
app/android/app/: .project  build.gradle
app/android/app/src/main/cpp/speech-transcription/: CMakeLists.txt  whisper_jni.cpp
app/ios/App/App/: Info.plist
app/scripts/: check-16kb-alignment.mjs  check-src-structure.mjs
app/src/: App.css  App.tsx  index.css  main.tsx
app/src/app/: Accounts.spec.tsx  Accounts.tsx  App.css  App.tsx  Budget.tsx  Dashboard.tsx  Debug.tsx  formatting.ts
app/src/data/: coreAdapter.ts  coreAdapterWeb.mobillsImport.spec.ts  coreAdapterWeb.ts
app/src/domain/: corePort.ts
app/src/imports/: index.ts
app/src/movements/: index.ts
app/src/native/: corePlugin.ts  corePluginWeb.ts
app/src/recurrence/: index.ts
app/src/scheduling/: index.ts
app/src/transactions/: index.ts
apps/: README.md
core/: .classpath  .project  README.md  build.gradle  kls_database.db  settings.gradle
core/application/: .project  README.md  build.gradle
core/domain/: .classpath  .project  README.md  build.gradle
core/infrastructure/: .classpath  .project  README.md  build.gradle
core/schema-guided-interpretation/: build.gradle
core/schema-guided-interpretation-json/: build.gradle
core/speech-transcription-contract/: build.gradle
core/src/main/cpp/audioextraction/: CMakeLists.txt  whisper_jni.cpp
design/: class-diagram.plantuml  offline-sync-sequence.plantuml  system-diagram.plantuml
docs/: README.md  frontend-architecture.md  ledger-domain.md  ledger-taxonomy-workflow.md  migration-capability-matrix.md  mobills-import.md  movements-backup-import.md  schema-guided-interpretation.md  speech-transcription.md  taxonomy-domain.md  user-preferences.md
docs/adr/: 001-local-schema-guided-runtime.md
docs/architecture/: build-commands.md  dependency-rules.md  smoke-checklist.md
docs/old/: migration-capability-matrix.md
docs/old/architecture/: android-ui-mvp-plan.md  smoke-checklist.md
native/android/domain/: build.gradle
scripts/: check-no-spring-runtime.sh
src/: main.tsx
src/app/: App.css  Debug.tsx  Home.tsx
src/data/: coreAdapter.ts  coreAdapterWeb.ts
src/domain/: corePort.ts
src/main/resources/: application.properties
src/native/: corePlugin.ts  corePluginWeb.ts
src/test/resources/: application.yaml
(+1896 files in other folders)
